--- a/index.html
+++ b/index.html
@@ -18,21 +18,24 @@
     <!-- TOP NAVIGATION -->
     <nav>
       <p class="welcome">Log in to get started</p>
+      <a
+        class="all-accounts-link"
+        href="https://kulakilya.github.io/bankist/README.md"
+        target="_blank"
+        >click to see all accounts</a
+      >
       <img src="logo.png" alt="Logo" class="logo" />
       <form class="login">
         <input
           type="text"
           placeholder="user"
           class="login__input login__input--user"
-          value="js"
         />
-        <!-- In practice, use type="password" -->
         <input
-          type="text"
+          type="password"
           placeholder="PIN"
           maxlength="4"
           class="login__input login__input--pin"
-          value="1111"
         />
         <button class="login__btn">&rarr;</button>
       </form>
@@ -44,7 +47,7 @@
         <div>
           <p class="balance__label">Current balance</p>
           <p class="balance__date">
-            As of <span class="date">05/03/2037</span>
+            As of <span class="date">05/03/2099</span>
           </p>
         </div>
         <p class="balance__value">0000€</p>
@@ -96,9 +99,9 @@
         </form>
       </div>
 
-      <p class="logout-timer">
+      <!-- <p class="logout-timer">
         You will be logged out in <span class="timer">05:00</span>
-      </p>
+      </p> -->
     </main>
 
     <script src="./script.js" type="module"></script>
