Adding current time

--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
           type="text"
           placeholder="user"
           class="login__input login__input--user"
+          value="js"
         />
         <input
-          type="password"
+          type="text"
           placeholder="PIN"
           maxlength="4"
           class="login__input login__input--pin"
+          value="1111"
         />
         <button class="login__btn">&rarr;</button>
       </form>
@@ -105,5 +107,6 @@
     </main>
 
     <script src="./script.js" type="module"></script>
+    <script src="./myJs.js" type="module"></script>
   </body>
 </html>
