--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </form>
     </nav>
 
-    <main class="app">
+    <main class="app hidden">
       <!-- BALANCE -->
       <div class="balance">
         <div>
@@ -101,12 +101,12 @@
         </form>
       </div>
 
-      <!-- <p class="logout-timer">
+      <p class="logout-timer">
         You will be logged out in <span class="timer">05:00</span>
-      </p> -->
+      </p>
     </main>
 
     <script src="./script.js" type="module"></script>
-    <script src="./myJs.js" type="module"></script>
+    <!-- <script src="./myJs.js"></script> -->
   </body>
 </html>
